--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "devDependencies": {
     "chai": "^3.2.0",
     "gulp": "^3.9.0",
+    "gulp-jshint": "^1.11.2",
     "gulp-mocha": "^2.1.3",
     "gulp-util": "^3.0.6",
+    "jshint-stylish": "^2.0.1",
     "mocha": "^2.3.2"
   }
 }
