--- a/package.json
+++ b/package.json
@@ -23,6 +23,11 @@
     "gulp-mocha": "^2.1.3",
     "gulp-util": "^3.0.6",
     "jshint-stylish": "^2.0.1",
-    "mocha": "^2.3.2"
+    "mocha": "^2.3.2",
+    "sinon": "^1.16.1"
+  },
+  "dependencies": {
+    "async": "^1.4.2",
+    "lodash": "^3.10.1"
   }
 }
