--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "better-console": "^0.2.4",
     "chai": "^3.2.0",
     "gulp": "^3.9.0",
+    "gulp-istanbul": "^0.10.0",
     "gulp-jshint": "^1.11.2",
     "gulp-mocha": "^2.1.3",
     "gulp-util": "^3.0.6",
     "jshint-stylish": "^2.0.1",
     "mocha": "^2.3.2",
+    "run-sequence": "^1.1.3",
     "sinon": "^1.16.1"
   },
   "dependencies": {
