--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-util": "^3.0.6",
     "jshint-stylish": "^2.0.1",
     "mocha": "^2.3.2",
+    "rewire": "^2.3.4",
     "run-sequence": "^1.1.3",
     "sinon": "^1.16.1"
   },
