--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "better-console": "^0.2.4",
     "chai": "^3.2.0",
     "gulp": "^3.9.0",
+    "gulp-eslint": "^1.0.0",
+    "gulp-insert": "^0.5.0",
     "gulp-istanbul": "^0.10.0",
-    "gulp-jshint": "^1.11.2",
     "gulp-mocha": "^2.1.3",
     "gulp-util": "^3.0.6",
     "jshint-stylish": "^2.0.1",
