--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,12 @@
   "env": {
     "node": "true"
   },
-  "extends": "eslint:recommended"
+  "extends": "eslint:recommended",
+  "rules": {
+    "consistent-return": 2,
+    "no-else-return": 2,
+    "callback-return": 2,
+    "handle-callback-err": 1
+  }
 }
 
