--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
     "jshint-stylish": "^2.0.1",
     "mocha": "^2.3.2",
     "rewire": "^2.3.4",
-    "run-sequence": "^1.1.3",
-    "sinon": "^1.16.1"
+    "run-sequence": "^1.1.3"
   },
   "dependencies": {
     "async": "^1.4.2",
     "bitly": "^3.0.1",
+    "change-case": "^2.3.0",
     "lodash": "^3.10.1"
   }
 }
