--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-util": "^3.0.6",
     "jshint-stylish": "^2.0.1",
     "mocha": "^2.3.2",
+    "nock": "^2.12.0",
     "rewire": "^2.3.4",
     "run-sequence": "^1.1.3"
   },
