--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ node_js:
 - '0.10'
 before_script:
 - npm install -g gulp
-script: gulp
+script: gulp travis
 before_install:
 - openssl aes-256-cbc -K $encrypted_86801d563202_key -iv $encrypted_86801d563202_iv
   -in travis.tar.enc -out travis.tar -d
