--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "better-console": "^0.2.4",
     "chai": "^3.2.0",
+    "chai-as-promised": "^5.1.0",
     "gulp": "^3.9.0",
     "gulp-eslint": "^1.0.0",
     "gulp-insert": "^0.5.0",
@@ -35,7 +36,12 @@
     "async": "^1.4.2",
     "aws-sdk": "^2.2.6",
     "bitly": "^3.0.1",
+    "bluebird": "^2.10.2",
     "change-case": "^2.3.0",
-    "lodash": "^3.10.1"
+    "fs-extra": "^0.24.0",
+    "glob": "^5.0.15",
+    "lodash": "^3.10.1",
+    "nodegit": "^0.5.0",
+    "tar-fs": "^1.8.1"
   }
 }
