--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "bitly": "^3.0.1",
     "bluebird": "^2.10.2",
     "change-case": "^2.3.0",
+    "fs-extra": "^0.24.0",
     "lodash": "^3.10.1"
   }
 }
