--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "bluebird": "^2.10.2",
     "change-case": "^2.3.0",
     "fs-extra": "^0.24.0",
-    "lodash": "^3.10.1"
+    "glob": "^5.0.15",
+    "lodash": "^3.10.1",
+    "nodegit": "^0.5.0",
+    "tar-fs": "^1.8.1"
   }
 }
