--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,4 @@ script: gulp travis
 before_install:
 - openssl aes-256-cbc -K $encrypted_86801d563202_key -iv $encrypted_86801d563202_iv
   -in travis.tar.enc -out travis.tar -d
+- apt-get update && apt-get install libc6 -yq
