--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,5 @@
 language: node_js
 node_js:
-- '4.1'
-- '4.0'
 - '0.12'
 - '0.11'
 - '0.10'
@@ -11,3 +9,15 @@ script: gulp travis
 before_install:
 - openssl aes-256-cbc -K $encrypted_86801d563202_key -iv $encrypted_86801d563202_iv
   -in travis.tar.enc -out travis.tar -d
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-4.9
+      - gcc-4.9
+      - libc6-dev
+
+before_install:
+  - export CC=/usr/bin/gcc-4.9;
+  - export CXX=/usr/bin/g++-4.9;
