--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-sudo: true
 language: node_js
 node_js:
 - '4.1'
@@ -12,4 +11,7 @@ script: gulp travis
 before_install:
 - openssl aes-256-cbc -K $encrypted_86801d563202_key -iv $encrypted_86801d563202_iv
   -in travis.tar.enc -out travis.tar -d
-- sudo apt-get install libc6 -yq
+addons:
+  apt:
+    packages:
+      - libc6
