--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,13 @@ before_install:
   -in travis.tar.enc -out travis.tar -d
 addons:
   apt:
+    sources:
+      - ubuntu-toolchain-r-test
     packages:
-      - build-essential
+      - g++-4.9
+      - gcc-4.9
+      - libc6-dev
+
+before_install:
+  - export CC=/usr/bin/gcc-4.9;
+  - export CXX=/usr/bin/g++-4.9;
