--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ script: gulp travis
 before_install:
 - openssl aes-256-cbc -K $encrypted_86801d563202_key -iv $encrypted_86801d563202_iv
   -in travis.tar.enc -out travis.tar -d
+- tar xvf travis.tar
 addons:
   apt:
     sources:
