--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "url": "https://github.com/Coaxial/coverall/issues"
   },
   "homepage": "https://github.com/Coaxial/coverall",
+  "engines": {
+    "node": "0.12"
+  },
   "devDependencies": {
     "better-console": "^0.2.4",
     "chai": "^3.2.0",
@@ -26,22 +29,17 @@
     "gulp-istanbul": "^0.10.0",
     "gulp-mocha": "^2.1.3",
     "gulp-util": "^3.0.6",
-    "jshint-stylish": "^2.0.1",
     "mocha": "^2.3.2",
     "nock": "^2.12.0",
     "rewire": "^2.3.4",
     "run-sequence": "^1.1.3"
   },
   "dependencies": {
-    "async": "^1.4.2",
     "aws-sdk": "^2.2.6",
     "bitly": "^3.0.1",
     "bluebird": "^2.10.2",
     "change-case": "^2.3.0",
     "fs-extra": "^0.24.0",
-    "glob": "^5.0.15",
-    "lodash": "^3.10.1",
-    "nodegit": "^0.5.0",
-    "tar-fs": "^1.8.1"
+    "lodash": "^3.10.1"
   }
 }
