--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
     "gulp-util": "^3.0.6",
     "mocha": "^2.3.2",
     "nock": "^2.12.0",
-    "rewire": "^2.3.4",
-    "run-sequence": "^1.1.3"
+    "proxyquire": "^1.7.3",
+    "run-sequence": "^1.1.3",
+    "sinon": "^1.17.1"
   },
   "dependencies": {
     "aws-sdk": "^2.2.6",
