--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "gulp-eslint": "^1.0.0",
     "gulp-insert": "^0.5.0",
     "gulp-istanbul": "^0.10.0",
-    "gulp-mocha": "^2.1.3",
+    "gulp-spawn-mocha": "^2.2.1",
     "gulp-util": "^3.0.6",
     "mocha": "^2.3.2",
     "nock": "^2.12.0",
