--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,4 @@ before_install:
 - tar xvf travis.tar
 - export CC=/usr/bin/gcc-4.9;
 - export CXX=/usr/bin/g++-4.9;
+after_success: ./node_modules/.bin/coveralls --verbose < coverage/lcov.info
