--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "better-console": "^0.2.4",
     "chai": "^3.2.0",
     "chai-as-promised": "^5.1.0",
+    "coveralls": "^2.11.4",
     "gulp": "^3.9.0",
     "gulp-eslint": "^1.0.0",
     "gulp-insert": "^0.5.0",
     "gulp-istanbul": "^0.10.0",
+    "gulp-mocha": "^2.1.3",
     "gulp-spawn-mocha": "^2.2.1",
     "gulp-util": "^3.0.6",
     "mocha": "^2.3.2",
