--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gulp-util": "^3.0.6",
     "mocha": "^2.3.2",
     "nock": "^2.12.0",
+    "proxyquire": "^1.7.3",
     "rewire": "^2.3.4",
     "run-sequence": "^1.1.3",
     "sinon": "^1.17.1"
