--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gulp-spawn-mocha": "^2.2.1",
     "gulp-util": "^3.0.6",
     "mocha": "^2.3.2",
+    "mocha-lcov-reporter": "^1.0.0",
     "nock": "^2.12.0",
     "proxyquire": "^1.7.3",
     "rewire": "^2.3.4",
